# bookstore

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml  old_build.txt  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
tests/: test_category_viewset.py  test_order_serializer.py  test_order_viewset.py  test_product.py  test_product_serializer.py  test_product_viewset.py
